buyew.css fix the double scroll bar issues; the horizontal scrolling remove the margin top...

--- a/ie32/frontend/src/components/horizontalscroll.css
+++ b/ie32/frontend/src/components/horizontalscroll.css
@@ -11,7 +11,7 @@
 }
 
 .horizontal-card {
-    margin-top: 40vh;
+
     flex: 0 0 80vw;
     display: flex;
     align-items: center;
